estrutura principal do projeto estruturada

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(my_project)
+project(server)
 
 # Add the C standard to use
 set(CMAKE_C_STANDARD 11)
 
 # Add your source files
-set(SOURCE_FILES server2.c)
+set(SERVER_SOURCE_FILES src/server.c)
 
 # Find the JSON-C library
 find_package(PkgConfig REQUIRED)
@@ -14,7 +14,7 @@ pkg_search_module(JSONC REQUIRED json-c)
 include_directories(${JSONC_INCLUDE_DIRS})
 
 # Create the executable
-add_executable(my_project ${SOURCE_FILES})
+add_executable(server ${SERVER_SOURCE_FILES})
 
 # Link against the JSON-C library
-target_link_libraries(my_project ${JSONC_LIBRARIES})
+target_link_libraries(server ${JSONC_LIBRARIES})
